--- a/EDEDSMVisualizer/pages/Generation.xaml
+++ b/EDEDSMVisualizer/pages/Generation.xaml
@@ -4,9 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EDEDSMVisualizer.pages"
+             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Controls:ProgressRing IsActive="True" />
+        <Label x:Name="info_output"></Label>
     </Grid>
 </UserControl>
