--- a/EDEDSMVisualizer/pages/Generation.xaml
+++ b/EDEDSMVisualizer/pages/Generation.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Controls:ProgressRing IsActive="True" />
+        <Controls:ProgressRing x:Name="loadingicon"  IsActive="True" />
         <Label x:Name="info_output"></Label>
     </Grid>
 </UserControl>
